--- a/config/database.yml
+++ b/config/database.yml
@@ -1,13 +1,7 @@
 development:
-  url: <%= ENV['DATABASE_URL'] %>
-  adapter: postgresql
-  encoding: unicode
-  host: localhost
-  port: 5432
-  pool: 5
-  database: myzenrx
+  adapter: sqlite3
+  database: database.db
   
-
 production:
   url: <%= ENV['DATABASE_URL'] %>
   adapter: postgresql
